# commee

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
SKILLS/claude-api/: SKILL.md
SKILLS/claude-api/scripts/: check_status.sh  install_claude_code.sh  launch_repl.py  pipe_prompt.py  run_headless.sh
docs/Messengers/: WhatsApp.md
scripts/: test_neonize.py
src/commee/: __init__.py
src/commee/chats/: chat.py
src/commee/messengers/: base.py  telegram.py  whatsapp.py
src/commee/test_cli/: __init__.py
